fix(issues806): stream object leak (#808)
Signed-off-by: Robin Han <hanxvdovehx@gmail.com>